--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
       <h2 data-aos="fade-up">Featured Collection</h2>
       <div class="grid">
         <div class="card" data-aos="zoom-in">
-          <img src="IMAGES/strtwear1.jpg" alt="" />
+          <img src="strtwear1.jpg" alt="" />
           <div class="overlay">
             <h3>Urban Shadow</h3>
             <button>View Look</button>
           </div>
         </div>
         <div class="card" data-aos="zoom-in" data-aos-delay="100">
-          <img src="IMAGES/strtwear2.jpg" alt="" />
+          <img src="strtwear2.jpg" alt="" />
           <div class="overlay">
             <h3>Golden Pulse</h3>
             <button>View Look</button>
           </div>
         </div>
         <div class="card" data-aos="zoom-in" data-aos-delay="200">
-          <img src="IMAGES/strtwear3.jpg" alt="" />
+          <img src="strtwear3.jpg" alt="" />
           <div class="overlay">
             <h3>Neon Haze</h3>
             <button>View Look</button>
